# src/app/api/v1/search/[param]/route.ts
@@ -4,12 +4,15 @@ import byteToData from "@/utils/byteToData"
 import { DateTime } from "luxon"
 import type { NextRequest } from "next/server"
 import type { FileInfo, FileInfoWithSearch } from "@/types/fileserver"
+import imageSize from "image-size"
 
 type Props = {
   params: Promise<{
     param: string
   }>
 }
+
+const IMG_EXT = [".png", ".jpg", ".jpeg", ".webp", ".gif", ".svg"]
 
 export async function GET(request: NextRequest, { params }: Props) {
   const param = (await params).param
@@ -21,11 +24,13 @@ export async function GET(request: NextRequest, { params }: Props) {
   const dirs = fs.readdirSync(filesDir)
   const files = dirs.filter((dir) => !["favicon.ico"].includes(dir))
   const images: FileInfo[] = files.map((dir) => {
-    const file = fs.readdirSync(`${filesDir}/${dir}`)[0]
+    const file = fs
+      .readdirSync(`${filesDir}/${dir}`)
+      .filter((file) => file !== "thumbnail.png")[0]
     const fileStat = fs.statSync(`${filesDir}/${dir}/${file}`)
     const downloadCount = counter[dir] || 0
 
-    return {
+    const info: FileInfo = {
       code: dir,
       url: `${process.env.URL}/files/${dir}`,
       rawName: file,
@@ -39,6 +44,19 @@ export async function GET(request: NextRequest, { params }: Props) {
       ago: DateTime.fromJSDate(fileStat.mtime).setLocale("en").toRelative(),
       downloadCount,
     }
+
+    if (IMG_EXT.includes(path.extname(file))) {
+      const imageSizeData = imageSize(path.join(filesDir, dir, file))
+
+      info.width = imageSizeData.width
+      info.height = imageSizeData.height
+    }
+
+    if (fs.existsSync(path.join(filesDir, dir, "thumbnail.png"))) {
+      info.thumbnail = `${process.env.URL}/api/v1/thumbnail/${dir}`
+    }
+
+    return info
   })
 
   const imagesFiltered: FileInfoWithSearch[] = []
